[package]
name = "timekeep"
version = "0.1.0"
edition = "2021"
description = "Small command-line program for tracking time spent on different tasks."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
directories = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.2.6", features = ["derive"] }
